--- a/package.json
+++ b/package.json
@@ -1,26 +1,30 @@
 {
-  "name": "we-rec",
+  "name": "frontend-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
-    "@types/node": "^16.11.64",
-    "@types/react": "^18.0.21",
+    "@types/node": "^16.11.59",
+    "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "bootstrap": "^5.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
-    "typescript": "^4.8.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "webpack --config webpack.config.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch": "webpack --watch -d --output ./target/classes/static/built/bundle.js"
   },
   "eslintConfig": {
     "extends": [
@@ -39,5 +43,41 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "proxy": "https://easy-recipe-app.herokuapp.com",
+
+  "devDependencies": {
+    "@reduxjs/toolkit": "^1.8.5",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.11.59",
+    "bootstrap": "^5.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.1",
+    "react-scripts": "5.0.1",
+    "web-vitals": "^2.1.4",
+
+
+
+
+
+
+    "@types/react": "^18.0.20",
+    "@types/react-dom": "^18.0.6",
+    "@types/webpack": "5.28.0",
+    "autoprefixer": "10.4.12",
+    "css-loader": "6.7.1",
+    "html-webpack-plugin": "^5.5.0",
+    "postcss-loader": "7.0.1",
+    "sass-loader": "13.0.2",
+    "style-loader": "3.3.1",
+    "ts-loader": "9.3.1",
+    "typescript": "^4.8.3",
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   }
 }
